<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/set_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_title_hint"
        android:singleLine="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:text="@string/list_click_effect"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center">

        <ToggleButton
            android:id="@+id/list_click_strikethru"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textOn="@string/list_click_strikethru"
            android:textOff="@string/list_click_strikethru"/>

        <ToggleButton
            android:id="@+id/list_click_bold"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textOn="@string/list_click_bold"
            android:textOff="@string/list_click_bold"/>

        <ToggleButton
            android:id="@+id/list_click_delete"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textOn="@string/list_click_delete"
            android:textOff="@string/list_click_delete"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:text="@string/list_text_size"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center">

        <ToggleButton
            android:id="@+id/set_text_small"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textOn="@string/small"
            android:textOff="@string/small"/>

        <ToggleButton
            android:id="@+id/set_text_medium"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textOn="@string/medium"
            android:textOff="@string/medium"/>

        <ToggleButton
            android:id="@+id/set_text_large"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textOn="@string/large"
            android:textOff="@string/large"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/list_text_color"
        android:paddingBottom="5dp"
        style="?android:listSeparatorTextViewStyle"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/set_text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/colorBlack"/>

        <Button
            android:id="@+id/set_text_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/colorDarkRed"/>

        <Button
            android:id="@+id/set_text_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDarkBlue"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/list_bg_color"
        android:paddingBottom="5dp"
        style="?android:listSeparatorTextViewStyle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/set_bg_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/colorWhite"/>

        <Button
            android:id="@+id/set_bg_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/colorLightRed"/>

        <Button
            android:id="@+id/set_bg_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorLightOrange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/set_bg_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/colorLightYellow"/>

        <Button
            android:id="@+id/set_bg_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/colorLightGreen"/>

        <Button
            android:id="@+id/set_bg_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorLightBlue"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info_sample_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:text="@string/sample"/>

</LinearLayout>

</ScrollView>